--- a/sass/main.sass
+++ b/sass/main.sass
@@ -134,12 +134,13 @@ h3,
     -ms-justify-content: center
     -o-justify-content: center
     justify-content: center
-    align-items: center
+    -ms-align-items: flex-start
+    align-items: flex-start
     -webkit-flex-wrap: wrap
     -moz-flex-wrap: wrap
     -ms-flex-wrap: wrap
     -o-flex-wrap: wrap
-    flex-wrap: 
+    flex-wrap: wrap
     margin-bottom: 100px
     
 .avard-box
